# rustword_manager

./: .gitattributes  Cargo.toml  README.md
src/: aes_impl.rs  app.rs  app_db_conn.rs  app_states.rs  base64_enc_dec.rs  db_interface.rs  event.rs  file_manager.rs  key_processor.rs  logger.rs  main.rs  password.rs  secure_storage.rs  stateful_list.rs  terminal.rs  types.rs  ui.rs
src/app/: clipboard_thread.rs  extras.rs  stateful_list.rs  states.rs  threads.rs
src/event/: login.rs  manager.rs
src/sql/: initiate.sql
src/ui/: fields.rs  login.rs  manager.rs
