[package]
name = "pw-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.3.0"
crossterm = "0.27.0"
dirs = "5.0.1"
passwords = "3.1.16"
ratatui = "0.25.0"
rusqlite = "0.30.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tui-textarea = "0.4.0"
